<resources>
    <string name="app_name">family safety</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="SOS">SOS</string>
    <string name="open_when_you_are_on_a_potentially_dengerous_journey">Open when you are on a potentially dengerous journey.</string>
    <string name="security">Security</string>
    <string name="home">Home</string>
    <string name="dashboard">dashboard</string>
    <string name="protect">protect</string>
    <string name="profile">Profile</string>
    <string name="sos_msg">In case of emergency, keep telling family members to contact me</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>