<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/security"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pinkcard"
        app:cardElevation="@dimen/dimens_16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="@dimen/dimens_16dp"
        android:layout_marginLeft="16dp"
        app:cardBackgroundColor="@color/pink_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/SOS"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pinkcard"
        app:layout_constraintTop_toTopOf="@+id/pinkcard" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/sos_msg"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/ic_sos"
        app:layout_constraintStart_toStartOf="@+id/pinkcard"
        app:layout_constraintTop_toBottomOf="@+id/text_sos" />

    <ImageView
        android:id="@+id/ic_sos"
        android:elevation="@dimen/dimens_16dp"
        android:src="@drawable/ic_sos"
        android:layout_margin="@dimen/dimen_8dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="@+id/pinkcard"
        app:layout_constraintTop_toTopOf="@+id/pinkcard"
        app:layout_constraintBottom_toBottomOf="@+id/pinkcard"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/greencard"
        app:cardElevation="@dimen/dimens_16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/green_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/pinkcard"
        tools:layout_editor_absoluteX="16dp" />
    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/greencard"
        app:layout_constraintTop_toTopOf="@+id/greencard" />


    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/open_when_you_are_on_a_potentially_dengerous_journey"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/ic_protect"
        app:layout_constraintStart_toStartOf="@+id/greencard"
        app:layout_constraintTop_toBottomOf="@+id/text_guard" />


    <ImageView
        android:id="@+id/ic_protect"
        android:elevation="@dimen/dimens_16dp"
        android:src="@drawable/ic_protect"
        android:layout_width="96dp"
        android:layout_margin="@dimen/dimen_8dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="@+id/greencard"
        app:layout_constraintTop_toTopOf="@+id/greencard"
        app:layout_constraintBottom_toBottomOf="@+id/greencard"
        />

</androidx.constraintlayout.widget.ConstraintLayout>